<resources>
    <string name="app_name">Book Library</string>

    <!-- Bottom Nav -->
    <string name="bottom_nav_library">Library</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_settings">Settings</string>

    <!-- Top -->
    <string name="top_settings">Settings</string>
    <string name="top_library">Library</string>
    <string name="top_profile">Profile</string>

    <!-- Settings -->
    <string name="settings_theme">App theme</string>
    <string name="settings_general">General</string>
    <!-- Night Mode -->
    <string name="settings_theme_night_mode">Night mode</string>
    <string name="settings_night_mode_summary">Choose light/dark mode</string>
    <string name="settings_theme_light_mode">Light mode</string>
    <!-- General -->
    <string name="settings_language">Language</string>
    <string name="settings_clear_cache">Clear search cache</string>
    <string name="settings_clear_cache_summary">Delete saved search results</string>
    <string name="settings_clear_cache_confirm">Saved search results will be deleted</string>
    <string name="settings_cache_cleared">Cached cleared</string>
    <!-- Notif settings -->
    <string name="settings_notif">Notifications</string>
    <string name="settings_notif_text1">Remind about reading</string>
    <string name="settings_notif_text2">Remind time</string>
    <string name="settings_notif_text2_time">Click to choose time</string>
    <string name="settings_notif_time">Notification at </string>
    <!-- About -->
    <string name="settings_about">About</string>
    <string name="settings_developers">Developers</string>
    <string name="title_activity_settings_night_mode">SettingsNightModeActivity</string>
    <!-- Logout -->
    <string name="settings_logout_title">Logout</string>
    <string name="settings_logout_summary">Quit current session</string>
    <string name="settings_account">Account</string>


    <!-- Library -->
    <string name="library_empty_title">Library is empty</string>
    <string name="library_empty_subtitle">Add first book</string>
    <string name="library_add_book">Add book</string>
    <string name="dialog_delete_title">Delete book?</string>
    <string name="dialog_delete_message">This action can not be canceled</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>

    <string name="book_title">Title *</string>
    <string name="book_author">Author *</string>
    <string name="book_genre">Genre</string>
    <string name="book_description">Description</string>
    <string name="book_save">Save</string>
    <string name="add_book">Add book</string>
    <string name="edit_book">Edit book</string>
    <string name="error_field_required">Required field</string>

    <!-- Search -->
    <string name="search_hint">Searching books…</string>
    <string name="search_book_added">Book is added to library</string>
    <string name="top_search">Search</string>

    <string name="sort_title">Sort</string>
    <string name="sort_by_date">By date added</string>
    <string name="sort_by_title">By title (A-Z)</string>
    <string name="sort_by_author">By author (A-Z)</string>

    <string name="filter_title">Choose genres</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_cancel">Cancel</string>
    <string name="filter_apply">Apply</string>

    <string name="no_internet">No Internet connection</string>
    <string name="search_cached">No Internet, cached result shown</string>

    <!-- Notifications -->
    <string name="notif_title">Reading time!</string>
    <string name="notif_text">Your library is waiting for you. Read your book right now.</string>

    <string name="select_cover">Select cover</string>

    <!-- Auth -->
    <string name="auth_title_login">Welcome Back!</string>
    <string name="auth_btn_login">Login</string>
    <string name="auth_btn_to_reg">Don\'t have an account? Register</string>
    <string name="auth_title_reg">Create Account</string>
    <string name="auth_btn_reg">Register</string>
    <string name="auth_btn_to_login">Already have an account? Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


</resources>