<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/app_theme"
            app:titleTextColor="@color/white"
            app:title="@string/top_library"/>

        <TextView
            android:id="@+id/tv_no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:background="#F44336"
            android:visibility="gone"/>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bottom_nav_bg"
            app:itemGravity="center"
            app:itemIconSize="30dp"
            app:itemIconTint="@drawable/bottom_nav_selector"
            app:itemPaddingBottom="5dp"
            app:itemPaddingTop="5dp"
            app:itemTextColor="@drawable/bottom_nav_selector"
            app:menu="@menu/bottom_nav_menu"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/library_add_book"
        app:backgroundTint="@color/app_theme"
        app:tint="@color/white"
        app:srcCompat="@android:drawable/ic_input_add"
        android:visibility="gone"/>

</FrameLayout>